--- a/crudrealtimeadmin/src/main/res/values/themes.xml
+++ b/crudrealtimeadmin/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.CDUDRealtimeClient" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryVariant">@color/green</item>
+        <item name="android:statusBarColor">@color/green</item>
     </style>
 
     <style name="Theme.CDUDRealtimeClient" parent="Base.Theme.CDUDRealtimeClient" />
